# introd3d9

./: CMakeLists.txt  Readme.txt  hello.cpp
Chapter 1/D3D9 Init/: CMakeListsbak.txt  d3dInit.cpp
Chapter 10/D3DXCreateMeshFVF/: d3dxcreatemeshfvf.cpp
Chapter 11/Progressive Mesh/: pmesh.cpp
Chapter 11/XFile/: xfile.cpp
Chapter 13/Terrain/: d3dUtility.cpp  terrainDriver.cpp
Chapter 14/Firework System/: firework.cpp  pSystem.cpp
Chapter 14/Laser System/: laser.cpp
Chapter 14/Snow System/: snow.cpp
Chapter 15/Pick/: pickSample.cpp
Chapter 16/Transform/: transform.cpp
Chapter 17/VS Diffuse Lighting/: vs_diffuse.cpp
Chapter 17/VS Toon 1 No Outlines/: toon.cpp
Chapter 17/VS Toon 2 With Outlines/: toon.cpp
Chapter 18/PS MultiTexture/: ps_multitex.cpp
projects/: ALL_BUILD.vcproj  AddressModes.vcproj  BoundingVolumes.vcproj  CFont.vcproj  Camera.vcproj  CartoonEffect.vcproj  ColoreTriangle.vcproj  Cube.vcproj  D3D9Init.vcproj  D3DXCreate.vcproj  D3DXCreateMeshFVF.vcproj  D3DXCreateText.vcproj  FireworkSystem.vcproj  FogEffect.vcproj  ID3DXFont.vcproj  IntroToD3D9.sln  LaserSystem.vcproj  LightingandTexturing.vcproj  MtrlAlpha.vcproj  PSMultiTexture.vcproj  Pick.vcproj  ProgressiveMesh.vcproj  SnowSystem.vcproj  StencilMirror.vcproj  StencilMirrorShadow.vcproj  StencilShadow.vcproj  Teapot.vcproj  Terrain.vcproj  TexCube.vcproj  TexQuad.vcproj  Transform.vcproj  Triangle.vcproj  VSDiffuseLighting.vcproj  VSToon1NoOutlines.vcproj  VSToon2WithOutlines.vcproj  XFile.vcproj  ZERO_CHECK.vcproj  directionallight.vcproj  intod3d9.vcproj  litpyramid.vcproj  (+4 more)
(+20 files in other folders)
